--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HabitHacker - Traccia le tue Abitudini</title>
@@ -11,29 +10,62 @@
             font-family: Arial, sans-serif;
             text-align: center;
             background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
         }
         .container {
-            max-width: 600px;
+            max-width: 800px;
             margin: 20px auto;
             background: white;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            color: #333;
         }
         .habit-list {
             text-align: left;
+            list-style-type: none;
+            padding: 0;
+            margin: 20px 0;
         }
-        button {
-            margin-top: 10px;
+        .habit-list li {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 10px 0;
             padding: 10px;
-            border: none;
+            background: #f9f9f9;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+        }
+        .habit-list button {
             background: #28a745;
             color: white;
+            border: none;
+            padding: 5px 15px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .habit-list button:hover {
+            background: #218838;
+        }
+        canvas {
+            margin-top: 30px;
+            width: 100%;
+            max-height: 400px;
+        }
+        button {
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 20px;
             cursor: pointer;
             border-radius: 5px;
         }
         button:hover {
-            background: #218838;
+            background: #0056b3;
         }
     </style>
 </head>
@@ -46,7 +78,7 @@
         <button onclick="addHabit()">Aggiungi Abitudine</button>
         <canvas id="progressChart"></canvas>
     </div>
-    
+
     <script>
         let habits = JSON.parse(localStorage.getItem('habits')) || [
             { name: "Bere 2L d'acqua", progress: 70 },
@@ -55,16 +87,22 @@
             { name: "Studio 1h al giorno", progress: 80 }
         ];
 
+        // Funzione per visualizzare le abitudini
         function renderHabits() {
             const habitList = document.getElementById("habit-list");
             habitList.innerHTML = "";
             habits.forEach((habit, index) => {
-                habitList.innerHTML += `<li>${habit.name} - Progresso: ${habit.progress}% <button onclick="updateProgress(${index})">+10%</button></li>`;
+                habitList.innerHTML += `
+                    <li>
+                        <span>${habit.name} - Progresso: ${habit.progress}%</span>
+                        <button onclick="updateProgress(${index})">+10%</button>
+                    </li>`;
             });
             updateChart();
             localStorage.setItem('habits', JSON.stringify(habits));
         }
 
+        // Funzione per aggiungere una nuova abitudine
         function addHabit() {
             const habitName = prompt("Inserisci una nuova abitudine:");
             if (habitName) {
@@ -73,11 +111,13 @@
             }
         }
 
+        // Funzione per aggiornare il progresso di un'abitudine
         function updateProgress(index) {
             habits[index].progress = Math.min(100, habits[index].progress + 10);
             renderHabits();
         }
 
+        // Inizializzazione del grafico
         let ctx = document.getElementById("progressChart").getContext("2d");
         let chart = new Chart(ctx, {
             type: 'bar',
@@ -86,12 +126,32 @@
                 datasets: [{
                     label: "Progresso (%)",
                     data: habits.map(h => h.progress),
-                    backgroundColor: "#28a745"
+                    backgroundColor: "#28a745",
+                    borderRadius: 5,
+                    borderWidth: 1
                 }]
             },
-            options: { responsive: true }
+            options: {
+                responsive: true,
+                scales: {
+                    x: {
+                        ticks: {
+                            autoSkip: true,
+                            maxTicksLimit: 5
+                        }
+                    },
+                    y: {
+                        min: 0,
+                        max: 100,
+                        ticks: {
+                            stepSize: 10
+                        }
+                    }
+                }
+            }
         });
 
+        // Funzione per aggiornare il grafico con le nuove abitudini
         function updateChart() {
             chart.data.labels = habits.map(h => h.name);
             chart.data.datasets[0].data = habits.map(h => h.progress);
