--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             padding: 0;
         }
         .container {
-            max-width: 800px;
+            max-width: 90%;
             margin: 20px auto;
             background: white;
             padding: 20px;
@@ -23,6 +23,7 @@
         }
         h1, h2 {
             color: #333;
+            font-size: 1.5em;
         }
         .habit-list {
             text-align: left;
@@ -43,7 +44,7 @@
         .habit-list button {
             color: white;
             border: none;
-            padding: 5px 15px;
+            padding: 5px 10px;
             cursor: pointer;
             border-radius: 5px;
         }
@@ -69,6 +70,7 @@
             margin-top: 30px;
             width: 100%;
             max-height: 400px;
+            max-width: 100%;
         }
         button {
             background: #007bff;
